prevent mobile card from going too low

--- a/styles/components/ExploreComponents/MapCard.scss
+++ b/styles/components/ExploreComponents/MapCard.scss
@@ -85,10 +85,10 @@
 .mapCard-drag-container {
   overflow: hidden;
   position: fixed;
-  //bottom:-90vh;
+  bottom:-70vh;
   top: 20vh;
   width: 100vw;
-  height: 150vh;
+  height: 160vh;
   pointer-events: none;
   display: block;
 }
